[project]
name = "python-language-tester"
version = "0.1.0"
license = { text = "MIT" }
description = ""
authors = [
    {name = "Hasan Zaidi",email = "haszaidi@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
